--- a/carga-bmf-arquivo-cotacoes-application/src/main/resources/application.properties
+++ b/carga-bmf-arquivo-cotacoes-application/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://192.168.42.35:5432/dbconcipag
-spring.datasource.username=rl_concipag_adm
-spring.datasource.password=rl_concipag_admdev
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
