--- a/carga-bmf-arquivo-cotacoes-application/src/main/resources/bootstrap.yml
+++ b/carga-bmf-arquivo-cotacoes-application/src/main/resources/bootstrap.yml
@@ -1,25 +1,4 @@
 # Spring properties
 spring:
   application:
-    name: hiker-concipagcargabow
-
----
-spring:
-  profiles: develop
-  cloud:
-    config:
-      uri: http://ualbax-dev:30002
-
----
-spring:
-  profiles: homolog
-  cloud:
-    config:
-      uri: http://ualbax-hom:30002
-
----
-spring:
-  profiles: prod
-  cloud:
-    config:
-      uri: http://ualbax-prod:30002
+    name: carga-bmf-arquivo-cotacoes
