--- a/carga-bmf-arquivo-cotacoes-application/src/main/resources/application.yml
+++ b/carga-bmf-arquivo-cotacoes-application/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 # Spring properties
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://0.0.0.0:5432/dbbmf
+    username: dbuser
+    password: dbpass
     driver-class-name: org.postgresql.Driver
