--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ PostgreSQL:
   environment:
     - DEBUG=false
 
-    - DB_USER=
-    - DB_PASS=
-    - DB_NAME=
+    - DB_USER=dbuser
+    - DB_PASS=dbpass
+    - DB_NAME=dbbmf
     - DB_TEMPLATE=
 
     - DB_EXTENSION=
