--- a/carga-bmf-arquivo-cotacoes-application/src/main/resources/application.yml
+++ b/carga-bmf-arquivo-cotacoes-application/src/main/resources/application.yml
@@ -5,3 +5,13 @@ spring:
     username: dbuser
     password: dbpass
     driver-class-name: org.postgresql.Driver
+  profiles:
+    active: local
+  application:
+    name: carga-bmf-arquivo-cotacoes
+  data:
+    jpa:
+      repositories:
+        enabled: false
+    mongodb:
+    uri: mongodb://localhost:27017/db_bmf
