--- a/carga-bmf-arquivo-cotacoes-model/pom.xml
+++ b/carga-bmf-arquivo-cotacoes-model/pom.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <artifactId>carga-bmf-arquivo-cotacoes</artifactId>
-        <groupId>com.ricardococati</groupId>
-        <version>1.0.0-SNAPSHOT</version>
-    </parent>
+  <parent>
+    <artifactId>carga-bmf-arquivo-cotacoes</artifactId>
+    <groupId>com.ricardococati</groupId>
+    <version>1.0.0-SNAPSHOT</version>
+  </parent>
 
-    <artifactId>carga-bmf-arquivo-cotacoes-model</artifactId>
+  <artifactId>carga-bmf-arquivo-cotacoes-model</artifactId>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-mongodb</artifactId>
+    </dependency>
+  </dependencies>
 
 </project>
