Incluindo atributo de média movel

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <spring.profiles.active>develop</spring.profiles.active>
+    <docker.image.prefix>springboot</docker.image.prefix>
   </properties>
 
   <parent>
@@ -182,6 +183,22 @@
         <version>${maven-release-plugin.version}</version>
         <configuration>
           <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>com.spotify</groupId>
+        <artifactId>docker-maven-plugin</artifactId>
+        <version>0.4.1</version>
+        <configuration>
+          <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+          <dockerDirectory>src/main/resources/docker</dockerDirectory>
+          <resources>
+            <resource>
+              <targetPath>/</targetPath>
+              <directory>${project.build.directory}</directory>
+              <include>${project.build.finalName}.war</include>
+            </resource>
+          </resources>
         </configuration>
       </plugin>
     </plugins>
