--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,11 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+    </dependency>
+
   </dependencies>
 
   <build>
