--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,12 @@
       <artifactId>spring-kafka</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+
     <!-- LOMBOK -->
     <dependency>
       <groupId>org.projectlombok</groupId>
