--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -12,7 +12,8 @@
     <artifactId>repository</artifactId>
 
     <properties>
-        <message.version>1.0.0-SNAPSHOT</message.version>
+        <otj-pg-embedded.version>0.11.3</otj-pg-embedded.version>
+        <flyway-core.version>3.2</flyway-core.version>
     </properties>
 
     <dependencies>
@@ -25,7 +26,6 @@
         <dependency>
             <groupId>com.ricardococati</groupId>
             <artifactId>message</artifactId>
-            <version>${message.version}</version>
         </dependency>
 
         <!-- EXTERNAL -->
@@ -37,6 +37,25 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.opentable.components</groupId>
+            <artifactId>otj-pg-embedded</artifactId>
+            <version>${otj-pg-embedded.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>${flyway-core.version}</version>
         </dependency>
 
     </dependencies>
