Incluindo docker postgres para o projeto de calculo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,17 @@ pg-dbbmf:
   ports:
     - "5432:5432"
 
+pg-calcula-dbbmf:
+  image: postgres:10.6-alpine
+  environment:
+    POSTGRES_DB: calcula_bmf
+    POSTGRES_USER: dbbmf
+    POSTGRES_PASSWORD: dbbmf
+  volumes:
+    - /data/sql/:/docker-entrypoint-initdb.d/
+  ports:
+    - "5433:5432"
+
 # Para CRIAR e INICIALIZAR os containers definidos acima:
 # docker-compose up  (esse comando cria e inicia os containers. Caso não queira apendar o processo no console utilizar a opção -d)
 
