--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -1,63 +1,123 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <artifactId>carga-bmf-arquivo-cotacoes</artifactId>
-        <groupId>com.ricardococati</groupId>
-        <version>1.0.0-SNAPSHOT</version>
-    </parent>
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <artifactId>carga-bmf-arquivo-cotacoes</artifactId>
+    <groupId>com.ricardococati</groupId>
+    <version>1.0.0-SNAPSHOT</version>
+  </parent>
 
-    <artifactId>repository</artifactId>
+  <artifactId>repository</artifactId>
 
-    <properties>
-        <otj-pg-embedded.version>0.11.3</otj-pg-embedded.version>
-        <flyway-core.version>3.2</flyway-core.version>
-    </properties>
+  <properties>
+    <otj-pg-embedded.version>0.11.3</otj-pg-embedded.version>
+    <flyway-core.version>3.2</flyway-core.version>
+    <jacoco-plugin.version>0.8.0</jacoco-plugin.version>
+    <fixture-factory.version>3.1.0</fixture-factory.version>
+  </properties>
 
-    <dependencies>
-        <!-- INTERNAL -->
-        <dependency>
-            <groupId>com.ricardococati</groupId>
-            <artifactId>model</artifactId>
-        </dependency>
+  <dependencies>
+    <!-- INTERNAL -->
+    <dependency>
+      <groupId>com.ricardococati</groupId>
+      <artifactId>model</artifactId>
+    </dependency>
 
-        <dependency>
-            <groupId>com.ricardococati</groupId>
-            <artifactId>message</artifactId>
-        </dependency>
+    <dependency>
+      <groupId>com.ricardococati</groupId>
+      <artifactId>message</artifactId>
+    </dependency>
 
-        <!-- EXTERNAL -->
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-        </dependency>
+    <!-- EXTERNAL -->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+    </dependency>
 
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
-        </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+    </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
 
-        <dependency>
-            <groupId>com.opentable.components</groupId>
-            <artifactId>otj-pg-embedded</artifactId>
-            <version>${otj-pg-embedded.version}</version>
-            <scope>test</scope>
-        </dependency>
+    <dependency>
+      <groupId>com.opentable.components</groupId>
+      <artifactId>otj-pg-embedded</artifactId>
+      <version>${otj-pg-embedded.version}</version>
+      <scope>test</scope>
+    </dependency>
 
-        <dependency>
-            <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-core</artifactId>
-            <version>${flyway-core.version}</version>
-        </dependency>
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+      <version>${flyway-core.version}</version>
+    </dependency>
 
-    </dependencies>
+    <dependency>
+      <groupId>br.com.six2six</groupId>
+      <artifactId>fixture-factory</artifactId>
+      <version>${fixture-factory.version}</version>
+    </dependency>
+
+  </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>${jacoco-plugin.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>jacoco-check</id>
+            <phase>test</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <rule>
+                  <element>CLASS</element>
+                  <excludes>
+                    <exclude>com.ricardococati.repository.config.*</exclude>
+                    <exclude>com.ricardococati.repository.event.*</exclude>
+                    <exclude>com.ricardococati.repository.util.*</exclude>
+                    <exclude>com.ricardococati.repository.dao.mapper.*</exclude>
+                    <exclude>com.ricardococati.repository.dao.sqlutil.*</exclude>
+                  </excludes>
+                  <limits>
+                    <limit>
+                      <counter>LINE</counter>
+                      <value>COVEREDRATIO</value>
+                      <minimum>0.00</minimum>
+                    </limit>
+                  </limits>
+                </rule>
+              </rules>
+            </configuration>
+          </execution>
+          <execution>
+            <id>report</id>
+            <phase>test</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
