Mudando versao do spring

--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -19,6 +19,8 @@ spring:
     active: local
   application:
     name: carga-bmf-arquivo-cotacoes
+  main:
+    allow-bean-definition-overriding: true
   flyway:
     url: ${spring.datasource.url}
     enabled: true
