--- a/application/pom.xml
+++ b/application/pom.xml
@@ -14,10 +14,11 @@
   <artifactId>application</artifactId>
 
   <properties>
-    <flyway-core.version>3.2</flyway-core.version>
+    <flyway-core.version>6.2.2</flyway-core.version>
     <springfox-swagger2.version>2.6.1</springfox-swagger2.version>
     <fixture-factory.version>3.1.0</fixture-factory.version>
     <jacoco-plugin.version>0.8.5</jacoco-plugin.version>
+    <commons-dbcp2.version>2.7.0</commons-dbcp2.version>
   </properties>
 
   <dependencies>
@@ -57,8 +58,9 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>commons-dbcp</groupId>
-      <artifactId>commons-dbcp</artifactId>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-dbcp2</artifactId>
+      <version>${commons-dbcp2.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
