--- a/pom.xml
+++ b/pom.xml
@@ -18,25 +18,14 @@
   </modules>
 
   <properties>
-    <!-- JAVA VERSION -->
     <java.version>11</java.version>
-    <!-- SPRING BOOT VERSION -->
     <spring-boot.version>1.5.3.RELEASE</spring-boot.version>
-    <!-- SPRING CLOUD VERSION -->
-    <spring-cloud.version>Brixton.RELEASE</spring-cloud.version>
-    <!-- LOMBOK VERSION -->
     <lombok.version>1.18.12</lombok.version>
-    <!-- MAVEN COMPILER PLUGIN VERSION -->
     <maven-compiler-plugin.version>3.6.0</maven-compiler-plugin.version>
-    <!-- MAVEN RELEASE PLUGIN VERSION -->
     <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
-    <!-- POSTGRESQL -->
     <postgresql.version>42.1.1</postgresql.version>
-    <!-- JDBC TEMPLATE VERSION -->
     <spring-jdbc.version>4.3.10.RELEASE</spring-jdbc.version>
-    <!-- ENCODES -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <spring.profiles.active>develop</spring.profiles.active>
     <docker.image.prefix>springboot</docker.image.prefix>
@@ -50,7 +39,6 @@
 
   <dependencyManagement>
     <dependencies>
-      <!-- INTERNAL -->
       <dependency>
         <groupId>com.ricardococati</groupId>
         <artifactId>model</artifactId>
@@ -76,43 +64,31 @@
         <artifactId>message</artifactId>
         <version>${project.version}</version>
       </dependency>
-
-      <!-- BOM -->
-      <!-- SPRING -->
       <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-dependencies</artifactId>
-        <version>${spring-cloud.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-properties-migrator</artifactId>
+        <scope>runtime</scope>
       </dependency>
-      <!-- EXTERNAL -->
-      <!-- LOMBOK -->
       <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
         <version>${lombok.version}</version>
       </dependency>
-      <!-- OJDBC6 -->
       <dependency>
         <groupId>oracle</groupId>
         <artifactId>ojdbc6</artifactId>
         <version>${ojdbc6.version}</version>
       </dependency>
-      <!-- SPRING BATCH -->
       <dependency>
         <groupId>org.springframework.batch</groupId>
         <artifactId>spring-batch-core</artifactId>
         <version>${spring-batch.version}</version>
       </dependency>
-      <!-- POSTGRESQL-->
       <dependency>
         <groupId>org.postgresql</groupId>
         <artifactId>postgresql</artifactId>
         <version>${postgresql.version}</version>
       </dependency>
-
-      <!-- Lib p/ integração cm Banco de dados -->
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-jdbc</artifactId>
@@ -122,47 +98,37 @@
   </dependencyManagement>
 
   <dependencies>
-    <!-- EXTERNAL -->
-    <!-- SPRING -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.springframework.batch</groupId>
       <artifactId>spring-batch-infrastructure</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.springframework.batch</groupId>
       <artifactId>spring-batch-core</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.springframework.kafka</groupId>
       <artifactId>spring-kafka</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
-
-    <!-- LOMBOK -->
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <scope>provided</scope>
     </dependency>
-
   </dependencies>
 
   <build>
     <pluginManagement>
       <plugins>
-        <!-- SPRING BOOT-->
         <plugin>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
@@ -171,7 +137,6 @@
             <mainClass>com.ricardococati.Application</mainClass>
           </configuration>
         </plugin>
-        <!-- MAVEN COMPILER PLUGIN -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
@@ -180,7 +145,6 @@
       </plugins>
     </pluginManagement>
     <plugins>
-      <!-- MAVEN COMPILER PLUGIN -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -189,7 +153,6 @@
           <target>${java.version}</target>
         </configuration>
       </plugin>
-      <!-- MAVEN RELEASE PLUGIN -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
