--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,37 +16,25 @@ kafka:
     KAFKA_SERVER_MAX_REQUEST_SIZE: 15728640
   volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-#
-#pg-dbbmf:
-#  image: postgres:10.6-alpine
-#  environment:
-#    POSTGRES_DB: dbbmf
-#    POSTGRES_USER: dbbmf
-#    POSTGRES_PASSWORD: dbbmf
-#  volumes:
-#    - /data/sql/:/docker-entrypoint-initdb.d/
-#  ports:
-#    - "5432:5432"
-#
-#pg-calcula-dbbmf:
-#  image: postgres:10.6-alpine
-#  environment:
-#    POSTGRES_DB: calcula_bmf
-#    POSTGRES_USER: dbbmf
-#    POSTGRES_PASSWORD: dbbmf
-#  volumes:
-#    - /data/sql/:/docker-entrypoint-initdb.d/
-#  ports:
-#    - "5433:5432"
 
-# Para CRIAR e INICIALIZAR os containers definidos acima:
-# docker-compose up  (esse comando cria e inicia os containers. Caso não queira apendar o processo no console utilizar a opção -d)
+pg-dbbmf:
+  image: postgres:10.6-alpine
+  environment:
+    POSTGRES_DB: dbbmf
+    POSTGRES_USER: dbbmf
+    POSTGRES_PASSWORD: dbbmf
+  volumes:
+    - /data/sql/dbbmf:/var/lib/postgresql/data
+  ports:
+    - "5432:5432"
 
-# Para verificar os containers rodando:
-# docker-compose ps
-
-# Para PARAR os containers
-# docker-compose stop
-
-# Para PARAR E REMOVER os containers
-# docker-compose down
+pg-calcula-dbbmf:
+  image: postgres:10.6-alpine
+  environment:
+    POSTGRES_DB: calcula_bmf
+    POSTGRES_USER: dbbmf
+    POSTGRES_PASSWORD: dbbmf
+  volumes:
+    - /data/sql/calcula_bmf:/var/lib/postgresql/data
+  ports:
+    - "5433:5432"
