--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
   <properties>
     <java.version>1.8</java.version>
     <spring-boot.version>1.5.3.RELEASE</spring-boot.version>
+    <fabric8.maven.plugin.version>3.5.38</fabric8.maven.plugin.version>
+    <fabric8.helm.chart>todos</fabric8.helm.chart>
     <lombok.version>1.18.12</lombok.version>
     <maven-compiler-plugin.version>3.6.0</maven-compiler-plugin.version>
     <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
@@ -29,6 +31,9 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <spring.profiles.active>develop</spring.profiles.active>
     <docker.image.prefix>springboot</docker.image.prefix>
+    <spring-cloud-starter-kubernetes.version>0.2.0.RELEASE</spring-cloud-starter-kubernetes.version>
+    <fabric8-maven-plugin.image>ricardococati/carga</fabric8-maven-plugin.image>
+    <fabric8-maven-plugin.volume.root>/data/bmfCarga/</fabric8-maven-plugin.volume.root>
   </properties>
 
   <parent>
@@ -65,9 +70,14 @@
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-properties-migrator</artifactId>
-        <scope>runtime</scope>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-kubernetes</artifactId>
+        <version>${spring-cloud-starter-kubernetes.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-kubernetes-config</artifactId>
+        <version>${spring-cloud-starter-kubernetes.version}</version>
       </dependency>
       <dependency>
         <groupId>org.projectlombok</groupId>
@@ -162,19 +172,40 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>com.spotify</groupId>
-        <artifactId>docker-maven-plugin</artifactId>
-        <version>0.4.1</version>
+        <groupId>io.fabric8</groupId>
+        <artifactId>fabric8-maven-plugin</artifactId>
+        <version>${fabric8.maven.plugin.version}</version>
         <configuration>
-          <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
-          <dockerDirectory>src/main/resources/docker</dockerDirectory>
-          <resources>
-            <resource>
-              <targetPath>/</targetPath>
-              <directory>${project.build.directory}</directory>
-              <include>${project.build.finalName}.war</include>
-            </resource>
-          </resources>
+          <images>
+            <image>
+              <name>${fabric8-maven-plugin.image}</name>
+              <build>
+                <from>adoptopenjdk/openjdk8</from>
+                <tags>
+                  <tag>${project.artifactId}</tag>
+                  <tag>${project.version}</tag>
+                </tags>
+                <assembly>
+                  <descriptorRef>artifact</descriptorRef>
+                </assembly>
+                <cmd>java -jar maven/${project.artifactId}-${project.version}.jar</cmd>
+              </build>
+              <run>
+                <volumes>
+                  <bind>
+                    <volume>rccargadirEntrada</volume>
+                    <volume>rccargadirErro</volume>
+                    <volume>rccargadirExecucao</volume>
+                    <volume>rccargadirSucesso</volume>
+                    <volume>rccargadirZIP</volume>
+                  </bind>
+                  <from>
+                    <image>${fabric8-maven-plugin.image}</image>
+                  </from>
+                </volumes>
+              </run>
+            </image>
+          </images>
         </configuration>
       </plugin>
     </plugins>
