--- a/pom.xml
+++ b/pom.xml
@@ -204,12 +204,12 @@
                     <exclude>com.ricardococati.carga.adapters.repositories.header.sqlutil.*</exclude>
                     <exclude>com.ricardococati.carga.adapters.repositories.ativo.mapper.*</exclude>
                     <exclude>com.ricardococati.carga.adapters.repositories.candlestick.mapper.*</exclude>
-                    <exclude>com.ricardococati.carga.adapters.scheduler.*</exclude>
-                    <exclude>com.ricardococati.carga.adapters.message.*</exclude>
+                    <exclude>com.ricardococati.carga.adapters.schedulers.*</exclude>
+                    <exclude>com.ricardococati.carga.adapters.messages.*</exclude>
                     <exclude>com.ricardococati.carga.usecases.arquivo.impl.DescompactarArquivoServiceImpl</exclude>
                     <exclude>com.ricardococati.carga.usecases.arquivo.impl.DownloadArquivoServiceImpl</exclude>
                     <exclude>com.ricardococati.carga.usecases.arquivo.impl.GerenciadorArquivosServiceImpl</exclude>
-                    <exclude>com.ricardococati.carga.usecases.integracao.impl.IntegrationServiceImpl</exclude>
+                    <exclude>com.ricardococati.carga.usecases.integracao.impl.IntegracaoServiceImpl</exclude>
                     <exclude>com.ricardococati.carga.usecases.candlestick.impl.BuildCandlestickSemanalServiceImpl</exclude>
                     <exclude>com.ricardococati.carga.usecases.candlestick.impl.CalculaCandlestickSemanalAsyncServiceImpl</exclude>
                   </excludes>
